objects/SLC_SelfRegistrationSetting__mdt.object
<CustomObject>
    <description>Custom metadata type that holds user IDs of owners of prospect Person Account records (Retail and Institutional) created through the self-registration journey</description>
    <fields>
        <fullName>SLC_LogInInsteadURL__c</fullName>
        <description>The URL that the user is directed to when they click &apos;Log in instead&apos; on the first screen of the self-registration journey</description>
        <inlineHelpText>The URL that the user is directed to when they click &apos;Log in instead&apos; on the first screen of the self-registration journey</inlineHelpText>
        <label>Log In Instead URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_ProspectAccountDefaultOwnerID__c</fullName>
        <description>User Id of the default owner for Institutional prospect person accounts</description>
        <inlineHelpText>User Id of the default owner for Institutional prospect person accounts</inlineHelpText>
        <label>Insto Prospect Account Default Owner ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_ProspectAccountDefaultOwnerName__c</fullName>
        <description>Name of the default Institutional owner</description>
        <inlineHelpText>Name of the default Institutional owner</inlineHelpText>
        <label>Insto Prospect Acc. Default Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_ProspectAccountDefaultOwnerID__c</fullName>
        <description>User Id of the default owner for Retail prospect person accounts</description>
        <inlineHelpText>User Id of the default owner for Retail prospect person accounts</inlineHelpText>
        <label>Retail Prospect Account Default Owner ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_ProspectAccountDefaultOwnerName__c</fullName>
        <description>Name of the Retail default owner</description>
        <inlineHelpText>Name of the Retail default owner</inlineHelpText>
        <label>Retail Prospect Acc. Default Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>STANLIB Self-Registration Setting</label>
    <pluralLabel>STANLIB Self-Registration Settings</pluralLabel>
</CustomObject>